<resources>
    <string name="app_name" translatable="false">Rebble Memos</string>
    <string name="action_settings">Settings</string>
    <string name="memo_title">Memo Title</string>
    <string name="memo_subtitle">Memo Subtitle (optional)</string>
    <string name="memo_body">Memo Body (optional)</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="send_timeline">Send to Timeline!</string>
    <string name="time_hint">Now</string>
    <string name="date_hint">Today</string>
    <string name="timeline_token">Timeline Token</string>
    <string name="memo_icon">Memo Icon</string>
    <string name="first_time">Welcome to Rebble Memos!</string>
    <string name="insert_token">Insert your token here</string>
    <string name="done">Done</string>
    <string name="preferences" translatable="false">preferences</string>
    <string name="not_first_time">Token Setup</string>
    <string name="token" translatable="false">Token:</string>
    <string name="edit_token">Change</string>
    <string name="no_token_set">No Token Set</string>
    <string name="required_field">Required Field</string>
    <string name="all_good">Memo Sent! ID:</string>
    <string name="contact_tizzu">Memo not sent! Contact the Author</string>
    <string name="check_your_token">Memo not sent! Check your Token and try again</string>
    <string name="too_many_pins">Memo not sent! Too many pins sent! Try again later</string>
    <string name="server_unreachable">Memo not sent! Server is unreachable</string>
    <string name="notify_on_arrival">Notify Memo Arrival on Watch</string>
    <string name="notify_on_event">Send a notification on time</string>
    <string name="new_memo">New Memo!</string>
    <!-- Strings used for fragments for navigation -->
</resources>
