<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/memo_title_edit"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/memo_title"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_text" />

    <EditText
        android:id="@+id/memo_subtitle_edit"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/memo_subtitle"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo_title_edit" />

    <EditText
        android:id="@+id/memo_body_edit"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/memo_body"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo_subtitle_edit" />

    <TextView
        android:id="@+id/time_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/time_hint"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/date_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memo_body_edit"
        tools:text="@string/time_hint" />

    <TextView
        android:id="@+id/date_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/date_hint"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_display"
        app:layout_constraintTop_toBottomOf="@+id/memo_body_edit" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_time"
        app:layout_constraintEnd_toStartOf="@+id/btn_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_display" />

    <Spinner
        android:id="@+id/icon_selector"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/send_to_timeline"
        app:layout_constraintEnd_toStartOf="@+id/icon_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_on_event_check" />

    <Button
        android:id="@+id/send_to_timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="63dp"
        android:text="@string/send_timeline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date_display"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@+id/date_display"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_time"
        app:layout_constraintTop_toBottomOf="@+id/date_display" />

    <ImageView
        android:id="@+id/icon_display"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/memo_icon"
        android:src="@drawable/notification_reminder"
        app:layout_constraintBottom_toTopOf="@+id/send_to_timeline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_selector"
        app:layout_constraintTop_toBottomOf="@+id/notify_on_event_check"
        app:srcCompat="@drawable/alarm_clock" />

    <TextView
        android:id="@+id/token_text"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/token"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/token_edit"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/no_token_set"
        app:layout_constraintEnd_toStartOf="@+id/change_token_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/token_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_token_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/edit_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/notify_arrival_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="2dp"
        android:text="@string/notify_on_arrival"
        app:layout_constraintBottom_toTopOf="@+id/notify_on_event_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time" />

    <CheckBox
        android:id="@+id/notify_on_event_check"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="24dp"
        android:text="@string/notify_on_event"
        app:layout_constraintBottom_toTopOf="@+id/icon_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_arrival_check" />

</androidx.constraintlayout.widget.ConstraintLayout>